line-smt-apis/force-app/main/default/objects/SalesRepresentative__c.object
<CustomObject>
    <fields>
        <fullName>CellPhone__c</fullName>
        <label>手機</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>經銷商名稱</label>
        <referenceTo>Dealer__c</referenceTo>
        <relationshipLabel>業代</relationshipLabel>
        <relationshipName>salesRepToDealer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LineID__c</fullName>
        <label>LINE_ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LineLink__c</fullName>
        <label>LINE連結</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>NickName__c</fullName>
        <label>暱稱</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhotoURL__c</fullName>
        <label>照片URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>QRCodeLink__c</fullName>
        <label>QRcode連結</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SalesRepresentativeCode__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>銷售業代代碼</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SelfRecommendedContent__c</fullName>
        <label>自我推薦內容</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Telephone__c</fullName>
        <label>電話</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>WorkingStatus__c</fullName>
        <label>在職狀態</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>在職</fullName>
                </value>
                <value>
                    <fullName>離職</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>業代</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LineID__c</columns>
        <columns>WorkingStatus__c</columns>
        <columns>Dealer__c</columns>
        <columns>SalesRepresentativeCode__c</columns>
        <columns>CellPhone__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>銷售業代</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>