line-smt-apis/force-app/main/default/objects/SalesRepresentative__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LineID__c</columns>
    <columns>WorkingStatus__c</columns>
    <columns>Dealer__c</columns>
    <columns>SalesRepresentativeCode__c</columns>
    <columns>CellPhone__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>